# quicksight-lineage-mcp

./: README.md  main.py  pyproject.toml
